# hpfeeds-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  mkdocs.yml  saturation_test.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  osv-scanner.yml  publish.yml  rust-clippy.yml
.trunk/: trunk.yaml
crates/hpfeeds-bench/: Cargo.toml
crates/hpfeeds-bench/src/: main.rs
crates/hpfeeds-cli/: Cargo.toml
crates/hpfeeds-cli/src/: main.rs
crates/hpfeeds-client/: Cargo.toml
crates/hpfeeds-client/src/: lib.rs
crates/hpfeeds-collector/: Cargo.toml
crates/hpfeeds-collector/src/: main.rs
crates/hpfeeds-core/: Cargo.toml
crates/hpfeeds-core/src/: lib.rs
crates/hpfeeds-entrypoint/: Cargo.toml
crates/hpfeeds-entrypoint/src/: main.rs
crates/hpfeeds-server/: Cargo.toml
crates/hpfeeds-server/src/: auth.rs  config.rs  db.rs  main.rs
crates/hpfeeds-server/tests/: handshake.rs  limits.rs  metrics_integration.rs  robustness.rs  routing.rs  slow_consumer.rs  tls.rs  unauth.rs  unsubscribe_multi.rs
docs/: ARCHITECTURE.md  api.md  architecture.md  cli.md  collector.md  index.md  server.md
init/: hpfeeds-collector.service  hpfeeds-server.service
scripts/: bump-version.sh  bump_version_safe.py  saturation_test.sh
