[package]
name = "hpfeeds-bench"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hpfeeds-client = { path = "../hpfeeds-client" }
hpfeeds-core = { path = "../hpfeeds-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "tls-rustls"] }

