[package]
name = "hpfeeds-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hpfeeds-client = { path = "../hpfeeds-client" }
hpfeeds-core = { path = "../hpfeeds-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-std", "io-util"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
bytes = "1"
futures = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "tls-rustls"] }
