[package]
name = "hpfeeds-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hpfeeds-client = { version = "0.1.0", path = "../hpfeeds-client" }
hpfeeds-core = { version = "0.1.0", path = "../hpfeeds-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-std", "io-util"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
bytes = "1"
futures = "0.3"
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
