[package]
name = "hpfeeds-client"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hpfeeds-core = { version = "0.1.0", path = "../hpfeeds-core" }
tokio = { version = "1", features = ["macros", "rt", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
anyhow = "1"
futures = "0.3"

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1.0"
