[package]
name = "hpfeeds-collector"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hpfeeds-client = { version = "0.1.0", path = "../hpfeeds-client" }
hpfeeds-core = { version = "0.1.0", path = "../hpfeeds-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
bytes = "1"
base64 = "0.13"
uuid = { version = "1.2", features = ["v4"] }
redis = { version = "0.23", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "tls-rustls"] }
mongodb = { version = "3.0" }
elasticsearch = { version = "8.5.0-alpha.1", default-features = false, features = ["rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
rskafka = "0.4"

[package.metadata.deb]
maintainer = "HPFeeds Maintainers <maintainers@hpfeeds.io>"
copyright = "2024, HPFeeds Maintainers"
license-file = ["../../LICENSE", "0"]
assets = [
    ["../../target/release/hpfeeds-collector", "/usr/bin/hpfeeds-collector", "755"],
    ["../../init/hpfeeds-collector.service", "/lib/systemd/system/hpfeeds-collector.service", "644"],
]

