[package]
name = "hpfeeds-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core types and codec for the hpfeeds protocol"

[dependencies]
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1", features = ["macros", "rt"] }
thiserror = "1"
futures = "0.3"
sha1 = "0.10"
