[package]
name = "hpfeeds-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
hpfeeds-core = { version = "0.1.0", path = "../hpfeeds-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
rand = "0.8"
sha1 = "0.10"
prometheus = "0.14"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "tls-rustls"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
pem = "3"
dashmap = "6.0"

# TLS support and test helpers
rustls = { version = "0.23", features = ["aws_lc_rs"] }
tokio-rustls = "0.26"
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "aws_lc_rs"] }

[package.metadata.deb]
maintainer = "HPFeeds Maintainers <maintainers@hpfeeds.io>"
copyright = "2024, HPFeeds Maintainers"
license-file = ["../../LICENSE", "0"]
assets = [
    ["../../target/release/hpfeeds-server", "/usr/bin/hpfeeds-server", "755"],
    ["../../init/hpfeeds-server.service", "/lib/systemd/system/hpfeeds-server.service", "644"],
]

[dev-dependencies]
hpfeeds-client = { version = "0.1.0", path = "../hpfeeds-client" }
tokio = { version = "1", features = ["macros", "rt", "time"] }
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
